Assessment2/header-injection.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: header-injection-route

spec:

  parentRefs:
    - name: company-gateway

  hostnames:
    - web.company.local
    - api.company.local
    - test.company.local


  rules:


    # NGINX HEADER INJECTION
    - matches:

        - path:
            type: PathPrefix
            value: /web


      filters:

        - type: RequestHeaderModifier

          requestHeaderModifier:

            add:

              - name: X-Application
                value: nginx-service


      backendRefs:

        - name: nginx-service
          port: 80




    # HTTPBIN HEADER INJECTION
    - matches:

        - path:
            type: PathPrefix
            value: /api


      filters:

        - type: RequestHeaderModifier

          requestHeaderModifier:

            add:

              - name: X-Application
                value: httpbin-service


      backendRefs:

        - name: httpbin-service
          port: 80




    # ECHOSERVER HEADER INJECTION
    - matches:

        - path:
            type: PathPrefix
            value: /test


      filters:

        - type: RequestHeaderModifier

          requestHeaderModifier:

            add:

              - name: X-Application
                value: echoserver-service


      backendRefs:

        - name: echoserver-service
          port: 80
