Assessment2/httproute-echoserver.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echoserver-route
spec:
  parentRefs:
    - name: company-gateway
  hostnames:
    - "test.company.local"
  rules:
    - backendRefs:
        - name: echoserver-service
          port: 80
