Assessment2/httproute-httpbin.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpbin-route
spec:
  parentRefs:
    - name: company-gateway
  hostnames:
    - "api.company.local"
  rules:
    - backendRefs:
        - name: httpbin-service
          port: 80
